--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: install dependencies
-      run: make install && mkdir build
+      run: make install && mkdir build build/shaders
     - name: compile glsl shader files
       run: make compile_shaders
     - name: generate cmake build Makefile
